Fix content overflow in teachor.html.

--- a/css/_common.sass
+++ b/css/_common.sass
@@ -80,6 +80,10 @@ button
   object-fit: cover
 
 
+.overflow-hidden
+  overflow: hidden
+
+
 .desktop-only
   @include untilpoint(desktop)
     display: none!important
